# ActiveDataLake

./: .gitignore  CMakeLists.txt  create.sql
avro_schemas/: manifest-file.json  manifest-list.json
cmake/: arrow.cmake  avro.cmake  btrblocks.cmake  clang-tidy.cmake  croaring.cmake  oatpp.cmake  pqxx.cmake
src/: App.cpp  AppComponent.hpp  ErrorHandler.hpp
src/controller/: S3InterfaceUtils.hpp  StaticController.hpp
src/controller/Iceberg/: Controller.cpp  DataController.hpp  EvictionJob.hpp  IcebergCatalogController.hpp  MetadataController.hpp
src/controller/Iceberg/avro_headers/: manifest.hpp  manifest_file.hpp  manifest_list.hpp
src/dto/: BlobDto.hpp  IcebergField.hpp  IcebergFieldDto.hpp  IcebergMetadata.hpp  IcebergMetadataDto.hpp  IcebergPartitionField.hpp  IcebergPartitionFieldDto.hpp  IcebergPartitionSpec.hpp  IcebergPartitionSpecDto.hpp  IcebergSchema.hpp  IcebergSchemaDto.hpp  IcebergSnapshot.hpp  IcebergSnapshotDto.hpp  IcebergSnapshotSummary.hpp  IcebergSortField.hpp  IcebergSortOrder.hpp  IcebergSortOrderDto.hpp  IcebergStructType.hpp  IcebergStructTypeDto.hpp  IcebergTypeDto.hpp  RequestDto.hpp  StatusDto.hpp
src/dto/IcebergRestDtos/: CatalogConfig.hpp  CatalogConfigDto.hpp  CommitTableRequest.hpp  CommitTableRequestDto.hpp  CreateNamespaceRequest.hpp  CreateNamespaceRequestDto.hpp  CreateTableRequest.hpp  CreateTableRequestDto.hpp  CreateTableResponse.hpp  CreateTableResponseDto.hpp  ErrorResponse.hpp  GetNamespaceResponseDto.hpp  ListNamespacesResponse.hpp  ListNamespacesResponseDto.hpp  ListTablesResponse.hpp  ListTablesResponseDto.hpp  LoadTableResponse.hpp  LoadTableResponseDto.hpp  TableIdentifier.hpp  TableIdentifierDto.hpp  TableMetadata.hpp  TableMetadataDto.hpp  TableRequirement.hpp  TableRequirementDto.hpp  TableUpdate.hpp  TableUpdateDto.hpp
src/util/: parallel.hpp  uuid.hpp
src/virtualization/: LazilyTransformedFile.hpp  LocalFile.hpp  MemoryBufferedTransformedFile.hpp  PostgresBufferedFile.hpp  PrefetchFile.hpp  RemoteFile.hpp  VirtualizedFile.cpp  VirtualizedFile.hpp
src/virtualization/parquet/: ColumnChunkWriter.hpp  ParquetUtils.hpp
